--- a/ChatDPT/static/styles.css
+++ b/ChatDPT/static/styles.css
@@ -1,32 +1,28 @@
 .chat-row {
-    display: flex;
-    margin: 5px;
-    width: 100%;
+  display: flex;
+  margin: 5px;
+  width: 100%;
 }
-
 .row-reverse {
-    flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
-
 .chat-bubble {
-    font-family: "Source Sans Pro", sans-serif, "Segoe UI", "Roboto", sans-serif;
-    border: 1px solid transparent;
-    padding: 5px 10px;
-    margin: 0px 7px;
-    max-width: 70%;
+  font-family: "Source Sans Pro", sans-serif, "Segoe UI", "Roboto", sans-serif;
+  border: 1px solid transparent;
+  padding: 5px 10px;
+  margin: 0px 7px;
+  max-width: 70%;
 }
-
 .ai-bubble {
-    background: rgb(240, 242, 246);
-    border-radius: 10px;
+  background: white;
+  border-radius: 10px;
+  color: black;
 }
-
 .human-bubble {
-    background: linear-gradient(135deg, rgb(0, 178, 255) 0%, rgb(0, 106, 255) 100%); 
-    color: white;
-    border-radius: 20px;
+  background: yellow;
+  border-radius: 20px;
+  color: black;
 }
-
 .chat-icon {
-    border-radius: 5px;
+  border-radius: 5px;
 }
